k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assignment-08-app
  namespace: assignment-08
spec:
  type: ClusterIP
  selector:
    app: assignment-08-app
  ports:
    - name: http
      port: 80
      targetPort: 80
